# GoIT_Web_PD_Homework_8

./: CLI_app.py  CLI_app_odm.py  README.md  consumer.py  find_by_tags_authors.py  main.py  main_odm.py  models.py  names.json  producer.py  pyproject.toml
01_hello_world/: consumer.py  producer.py
02_task/: consumer.py  producer.py
03_Pub-Sub/: consumer.py  producer.py
